SVG polygon self-closing and other fixes

--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -1,8 +1,8 @@
 <h1><span id="title">$lang: $title</span><input id="title-edit" value="$title" style="font-size: 0.8em; width: 100%;" hidden="" /></h1>
 <div class="pad vote lft">
-	<svg id="mup" class="blk up" xmlns="http://www.w3.org/2000/svg"><polygon points="10,1 1,19 19,19"></polygon></svg>
-	<svg id="mdn" class="blk dn" xmlns="http://www.w3.org/2000/svg"><polygon points="10,19 1,1 19,1"></polygon></svg>
-	<svg id="mfl" class="blk fl" xmlns="http://www.w3.org/2000/svg"><polygon points="1,1 19,1 19,11 5,11 5,23 1,23"></polygon></svg>
+	<svg id="mup" class="blk up" xmlns="http://www.w3.org/2000/svg"><polygon points="10,1 1,19 19,19" /></svg>
+	<svg id="mdn" class="blk dn" xmlns="http://www.w3.org/2000/svg"><polygon points="10,19 1,1 19,1" /></svg>
+	<svg id="mfl" class="blk fl" xmlns="http://www.w3.org/2000/svg"><polygon points="1,1 19,1 19,11 5,11 5,23 1,23" /></svg>
 </div>
 <div id="q-content">
 	<div id="q-body" class="hglt pad br">
@@ -44,7 +44,7 @@
 </div>
 <hr class="nomar bumar" />
 <!-- <h2 class="sumar">1 Answer</h2>
-<div id="answers"><div class="row"><div class="pad vote"><a href="javascript:answer.up('30')"><svg id="aup-30" class="blk up" xmlns="http://www.w3.org/2000/svg"><polygon points="10,1 1,19 19,19"></polygon></svg></a><a href="javascript:answer.dn('30')"><svg id="adn-30" class="blk dn" xmlns="http://www.w3.org/2000/svg"><polygon points="10,19 1,1 19,1"></polygon></svg></a><a href="javascript:answer.fl('30')"><svg id="afl-30" class="blk fl" xmlns="http://www.w3.org/2000/svg"><polygon points="1,1 19,1 19,11 5,11 5,23 1,23"></polygon></svg></a></div><div style="float: none; margin-left: 32px;"><div class="answer umar pad hglt br clearfix" id="30">
+<div id="answers"><div class="row"><div class="pad vote"><a href="javascript:answer.up('30')"><svg id="aup-30" class="blk up" xmlns="http://www.w3.org/2000/svg"><polygon points="10,1 1,19 19,19" /></svg></a><a href="javascript:answer.dn('30')"><svg id="adn-30" class="blk dn" xmlns="http://www.w3.org/2000/svg"><polygon points="10,19 1,1 19,1" /></svg></a><a href="javascript:answer.fl('30')"><svg id="afl-30" class="blk fl" xmlns="http://www.w3.org/2000/svg"><polygon points="1,1 19,1 19,11 5,11 5,23 1,23" /></svg></a></div><div style="float: none; margin-left: 32px;"><div class="answer umar pad hglt br clearfix" id="30">
 This text will be replaced
 </div>
 <form id="edit-30" action="javascript:answer.editSubmit(30,1)" hidden=""><textarea id="edit-ta-30" class="a-edit"></textarea><button type="submit">Submit Edit</button> <button type="button" onclick="answer.editSubmit(30)">Cancel</button></form></div></div></div>
