statics > front, errorPage > essentials, learn fix

--- a/html/learn/learn.html
+++ b/html/learn/learn.html
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div class="pad br">
-		<a>
+		<a href="ssj/">
 			<h2>Server-side JavaScript</h2>
 			<img src="nodejs.png" />
 		</a>
@@ -44,7 +44,7 @@
 		</div>
 	</div>
 	<div class="pad br">
-		<a href="debug/">
+		<a href="quality/">
 			<h2>Code Quality</h2>
 			<img src="quality.png" />
 		</a>
