Added link to About page

--- a/html/a/head.html
+++ b/html/a/head.html
@@ -42,6 +42,7 @@
 				<a href="/chat/">Chat</a>
 				<a href="/login/">Login</a>
 				<a href="/mod/">Mod</a>
+				<a href="/about">About</a>
 				<form action="/search/"><input type="text" name="q" value="$search" style="line-height: 16px;" placeholder="Search DevDoodle" /></form>
 			</nav>
 			<div id="content">
