--- a/html/learn/learn.html
+++ b/html/learn/learn.html
@@ -58,9 +58,13 @@
 		</div>
 	</div>
 </div>
+<h2>User submitted lessons</h2>
+$lessons
+<hr />
+<a href="new" title="Requires 20 reputation" class="small">Create Lesson</a>
 <style>
-	h2 { text-align: center }
 	#courses { max-width: 3200px }
+	#courses h2 { text-align: center }
 	#courses > div {
 		background: rgba(16, 140, 255, .8);
 		transition: background .2s;
