Bug fixes & multiple parts of lesson

--- a/html/learn/lesson.html
+++ b/html/learn/lesson.html
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="cntrls"><a href="../">Back</a></div>
+		<div id="cntrls"><a href="./">Back</a></div>
 	</div>
 	<textarea id="html">$html</textarea>
 	<iframe id="output"></iframe>
