--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -219,6 +219,8 @@
 			this.selectionStart = ++oldSelectionStart + tabs;
 			this.selectionEnd = this.selectionStart;
 			e.preventDefault();
+		} else if ((this.value[this.selectionStart] || '').match(/[^\s\,\(\[\{]/)) {
+			return;
 		} else if (e.keyCode == 34) {
 			this.value = this.value.substr(0, this.selectionStart) + '""' + this.value.substr(this.selectionStart);
 			this.selectionEnd = ++oldSelectionStart;
@@ -240,7 +242,6 @@
 			this.selectionEnd = ++oldSelectionStart;
 			e.preventDefault();
 		}
-		// console.log(e.keyCode);
 		run();
 	});
 	code.addEventListener('keydown', function(e) {
