--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -492,7 +492,7 @@ $textarea
 				e.preventDefault();
 				var i = cont.children.indexOf(document.getElementById(editing));
 				while (++i &lt; cont.children.length) {
-					if (cont.children[i].getElementsByClassName('c-sig')[0].getElementsByTagName('a')[0].textContent == username) {
+					if (cont.children[i].getElementsByClassName('c-sig')[0].getElementsByTagName('a')[0].textContent == username &amp;&amp; !cont.children[i].classList.contains('deleted')) {
 						ta.hists = ta.hists || {};
 						ta.hists[editing] = ta.hist;
 						ta.hist = ta.hists[false] || [{
