use of fullwidth/max-width classes

--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -28,7 +28,7 @@
 	</div>
 	<div id="comments" class="umar">$comments</div>
 	<form id="comment" class="target umar">
-		<textarea id="commentta" placeholder="Ask for clarification or suggest improvements." style="width: 100%" rows="4"></textarea>
+		<textarea id="commentta" placeholder="Ask for clarification or suggest improvements." class="fullwidth" rows="4"></textarea>
 		<button type="submit">Post</button>
 		<button type="reset" id="reset">Cancel</button>
 	</form>
