--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -156,7 +156,7 @@
 <script>
 	var footerOff = true,
 		noPageOverflow = 400,
-		pageOverflowMobile = true,
+		pageOverflowMobile = 700,
 		mainContentEl = document.getElementById('main'),
 		htmle = document.getElementById('html'),
 		css = document.getElementById('css'),
