Fix anchor color in learn.html

--- a/html/learn/learn.html
+++ b/html/learn/learn.html
@@ -71,8 +71,8 @@ $lessons
 	}
 	#courses > div:not(:first-child) { margin-top: 8px }
 	#courses > div:hover { background: rgba(24, 160, 255, .8) }
-	#content a:hover { color: #333 }
-	#content a:active { color: #100 }
+	#courses a:hover { color: #333 }
+	#courses a:active { color: #100 }
 	#courses img { border-radius: 4px }
 	@media (min-width: 700px) {
 		#courses > div { width: calc(50% - 4px) }
