--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -163,7 +163,7 @@
 		dn = document.getElementById('dn');
 	code.addEventListener('keypress', function(e) {
 		var oldSelectionStart = this.selectionStart;
-		if (e.keyCode === 13) {
+		if (e.keyCode == 13) {
 			if (this.value[oldSelectionStart - 1] == ',') this.eIndent = true;
 			var tabs = this.value.substr(0, oldSelectionStart)
 				.split('\n')[this.value.substr(0, oldSelectionStart).split('\n').length - 1]
@@ -261,11 +261,11 @@
 			if (save.textContent == 'Save') save.textContent = 'Saving…';
 		}, 200);
 		request('/api/program/save?type=1', function(res) {
-			if (res.indexOf('Error') === 0) {
+			if (res.indexOf('Error') == 0) {
 				clearTimeout(savingTimeout);
 				alert(res);
 				save.textContent = 'Save';
-			} else if (res.indexOf('Location') === 0) {
+			} else if (res.indexOf('Location') == 0) {
 				onbeforeunload = null;
 				location.href = res.split(' ')[1];
 			} else if (res == 'Success') {
@@ -287,13 +287,13 @@
 		var e = e.previousSibling.previousSibling;
 		e.hidden = e.previousSibling.previousSibling.hidden = true;
 		request('/api/program/save?type=1&amp;fork=1', function(res) {
-			if (res.indexOf('Error') === 0) {
+			if (res.indexOf('Error') == 0) {
 				e.hidden = false;
 				e = e.nextSibling.nextSibling;
 				e.hidden = false;
 				e.nextSibling.nextSibling.textContent = 'Fork';
 				alert(res);
-			} else if (res.indexOf('Location') === 0) {
+			} else if (res.indexOf('Location') == 0) {
 				onbeforeunload = null;
 				location.href = res.split(' ')[1];
 			} else alert('Unknown error. Response was: ' + res);
