Fix .user floating

--- a/html/user/userlist.html
+++ b/html/user/userlist.html
@@ -19,10 +19,7 @@
 	</select>
 </form>
 <style>
-	.user, .user:first-child {
-		float: left;
-		margin-top: 6px;
-	}
+	.user, .user:first-child { margin-top: 6px }
 </style>
 <div class="umar clearfix">
 	$users</div>
