#57 Change room type

--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -11,7 +11,7 @@
 			<button type="submit">Submit</button>
 			<button type="reset" onclick="resetEditForm()">Cancel</button>
 		</form>
-		<h2>Users:</h2>
+		<h2>Users: $access</h2>
 		<ul id="users"></ul>
 		<h2>Stars:</h2>
 		<ul id="stars"></ul>
