--- a/html/a/head.html
+++ b/html/a/head.html
@@ -17,7 +17,7 @@
 				<p>This site does not support Microsoft Internet Explorer due to its lack of compatibility with web specifications.</p><p>Please use a modern browser such as <a href="//chrome.google.com/">Chrome</a> to view this site.</p>
 			<![endif]-->
 			<!--[if !IE]> -->
-				<noscript>Your JavaScript is disabled. Please enable JavaScript to properly view this site.</noscript>
+				<noscript>JavaScript is required to view this site.</noscript>
 			<!-- <![endif]-->
 		</div>
 		<div id="cont">
