--- a/html/a/head.html
+++ b/html/a/head.html
@@ -14,7 +14,9 @@
 	<body>
 		<div id="err">
 			<!--[if IE]>
-				<p>This site does not support Microsoft Internet Explorer due to its lack of compatibility with web specifications.</p><p>Please use a modern browser such as <a href="//chrome.google.com/">Chrome</a> to view this site.</p>
+				<div>
+					<p>This site does not support Microsoft Internet Explorer due to its lack of compatibility with web specifications.</p><p>Please use a modern browser such as <a href="//chrome.google.com/">Chrome</a> to view this site.</p>
+				</div>
 			<![endif]-->
 			<!--[if !IE]> -->
 				<noscript>JavaScript is required to view this site.</noscript>
