--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -1,1 +1,69 @@
 <h1>Docs</h1>
+
+<h2>Lines and Shapes</h2>
+<ul>
+	<li><a href="line-func">line(x1, y1, x2, y2)</a></li>
+	<li><a href="http://devdoodle.net/dev/92/">rect(x, y, w, h)</a></li>
+	<li><a href="http://devdoodle.net/dev/93/">point(x, y)</a></li>
+	<li><a href="http://devdoodle.net/dev/95/">ellipse(cx, cy, rx, ry)</a></li>
+</ul>
+
+<h2>Text</h2>
+<ul>
+	<li><a href="http://devdoodle.net/dev/99/">text(x, y, t)</a></li>
+	<li><a href="http://devdoodle.net/dev/100/">textAlign(h, v)</a></li>
+	<li><a href="http://devdoodle.net/dev/101/">font(f)</a></li>
+</ul>
+
+<h2>Fill and Stroke</h2>
+<ul>
+	<li><a href="http://devdoodle.net/dev/79/">fill([shade] [r, g, b] [color])</a></li>
+	<li><a href="http://devdoodle.net/dev/80/">stroke([shade] [r, g, b] [color])</a></li>
+	<li><a href="http://devdoodle.net/dev/94/">bg([shade] [r, g, b] [color])</a></li>
+	<li><a href="http://devdoodle.net/dev/87/">strokeWidth(w)</a></li>
+	<li><a href="http://devdoodle.net/dev/81/">rgb(r, g, b[, a])</a></li>
+	<li><a href="http://devdoodle.net/dev/82/">hsl(h, s, l[, a])</a></li>
+	<li><a href="http://devdoodle.net/dev/78/">Using trans and none</a></li>
+</ul>
+
+<h2>Draw Loop</h2>
+<ul>
+	<li><a href="http://devdoodle.net/dev/102/">Using the draw loop</a></li>
+	<li><a href="http://devdoodle.net/dev/103/">Using frameRate</a></li>
+</ul>
+
+<h2>Mouse</h2>
+<ul>
+	<li><a href="http://devdoodle.net/dev/114/">Using mouseX and mouseY</a></li>
+	<li><a href="http://devdoodle.net/dev/115/">Using mousePressed</a></li>
+</ul>
+
+<h2>Keyboard</h2>
+<ul>
+	<li><a href="http://devdoodle.net/dev/117/">Using keyCodes and keyCodes[num]</a></li>
+	<li><a href="http://devdoodle.net/dev/116/">Using key</a></li>
+</ul>
+
+<h2>Math</h2>
+<ul>
+	<li><a href="http://devdoodle.net/dev/105/">Using Math Properties and Methods as Global Variables</a></li>
+	<li><a href="http://devdoodle.net/dev/111/">rand([x[, y]])</a></li>
+	<li><a href="http://devdoodle.net/dev/112/">Number.prototype.bound(l[, h])</a></li>
+</ul>
+
+<h2>Size</h2>
+<ul>
+	<li><a href="http://devdoodle.net/dev/97/">size(x, y)</a></li>
+	<li><a href="http://devdoodle.net/dev/98/">Using width and height</a></li>
+</ul>
+
+<h2>Console</h2>
+<ul>
+	<li><a href="http://devdoodle.net/dev/83/">print(input)</a></li>
+	<li><a href="http://devdoodle.net/dev/84/">resetLog()</a></li>
+</ul>
+
+<h2>Canvas</h2>
+<ul>
+	<li><a href="http://devdoodle.net/dev/118/">Using canvas and ctx</a></li>
+</ul>
