Canvas docs point-func #15

--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -4,7 +4,7 @@
 <ul>
 	<li><a href="line-func">line(x1, y1, x2, y2)</a></li>
 	<li><a href="rect-func">rect(x, y, w, h)</a></li>
-	<li><a href="http://devdoodle.net/dev/93/">point(x, y)</a></li>
+	<li><a href="point-func">point(x, y)</a></li>
 	<li><a href="http://devdoodle.net/dev/95/">ellipse(cx, cy, rx, ry)</a></li>
 </ul>
 
