--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -5,7 +5,7 @@
 	<li><a href="line-func">line(x1, y1, x2, y2)</a></li>
 	<li><a href="rect-func">rect(x, y, w, h)</a></li>
 	<li><a href="point-func">point(x, y)</a></li>
-	<li><a href="http://devdoodle.net/dev/95/">ellipse(cx, cy, rx, ry)</a></li>
+	<li><a href="ellipse-func">ellipse(cx, cy, rx, ry)</a></li>
 </ul>
 
 <h2>Text</h2>
