--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -1,11 +1,11 @@
-<h1>Docs</h1>
+<h1>Canvas Documentation</h1>
 
 <h2>Lines and Shapes</h2>
 <ul>
-	<li><a href="line-func">line(x1, y1, x2, y2)</a></li>
-	<li><a href="rect-func">rect(x, y, w, h)</a></li>
-	<li><a href="point-func">point(x, y)</a></li>
-	<li><a href="ellipse-func">ellipse(cx, cy, rx, ry)</a></li>
+	<li><a href="shapes/line-func">line(x1, y1, x2, y2)</a></li>
+	<li><a href="shapes/rect-func">rect(x, y, w, h)</a></li>
+	<li><a href="shapes/point-func">point(x, y)</a></li>
+	<li><a href="shapes/ellipse-func">ellipse(cx, cy, rx, ry)</a></li>
 </ul>
 
 <h2>Text</h2>
