Canvas docs text-func #15

--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -10,7 +10,7 @@
 
 <h2>Text</h2>
 <ul>
-	<li><a href="http://devdoodle.net/dev/99/">text(x, y, t)</a></li>
+	<li><a href="text/text-func">text(x, y, t)</a></li>
 	<li><a href="http://devdoodle.net/dev/100/">textAlign(h, v)</a></li>
 	<li><a href="http://devdoodle.net/dev/101/">font(f)</a></li>
 </ul>
