Canvas docs font-func #15

--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -12,7 +12,7 @@
 <ul>
 	<li><a href="text/text-func">text(x, y, t)</a></li>
 	<li><a href="text/align-func">textAlign(h, v)</a></li>
-	<li><a href="http://devdoodle.net/dev/101/">font(f)</a></li>
+	<li><a href="text/font-func">font(f)</a></li>
 </ul>
 
 <h2>Fill and Stroke</h2>
