Canvas docs fill-func #15

--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -17,7 +17,7 @@
 
 <h2>Fill and Stroke</h2>
 <ul>
-	<li><a href="http://devdoodle.net/dev/79/">fill([shade] [r, g, b] [color])</a></li>
+	<li><a href="fill/fill-func">fill([shade] [r, g, b] [color])</a></li>
 	<li><a href="http://devdoodle.net/dev/80/">stroke([shade] [r, g, b] [color])</a></li>
 	<li><a href="http://devdoodle.net/dev/94/">bg([shade] [r, g, b] [color])</a></li>
 	<li><a href="http://devdoodle.net/dev/87/">strokeWidth(w)</a></li>
