Canvas docs bg-func #15

--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -19,7 +19,7 @@
 <ul>
 	<li><a href="fill/fill-func">fill([shade] [r, g, b] [color])</a></li>
 	<li><a href="fill/stroke-func">stroke([shade] [r, g, b] [color])</a></li>
-	<li><a href="http://devdoodle.net/dev/94/">bg([shade] [r, g, b] [color])</a></li>
+	<li><a href="fill/bg-func">bg([shade] [r, g, b] [color])</a></li>
 	<li><a href="http://devdoodle.net/dev/87/">strokeWidth(w)</a></li>
 	<li><a href="http://devdoodle.net/dev/81/">rgb(r, g, b[, a])</a></li>
 	<li><a href="http://devdoodle.net/dev/82/">hsl(h, s, l[, a])</a></li>
