--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -20,50 +20,50 @@
 	<li><a href="fill/fill-func">fill([shade] [r, g, b] [color])</a></li>
 	<li><a href="fill/stroke-func">stroke([shade] [r, g, b] [color])</a></li>
 	<li><a href="fill/bg-func">bg([shade] [r, g, b] [color])</a></li>
-	<li><a href="http://devdoodle.net/dev/87/">strokeWidth(w)</a></li>
-	<li><a href="http://devdoodle.net/dev/81/">rgb(r, g, b[, a])</a></li>
-	<li><a href="http://devdoodle.net/dev/82/">hsl(h, s, l[, a])</a></li>
-	<li><a href="http://devdoodle.net/dev/78/">Using trans and none</a></li>
+	<li><a href="fill/strokew-func">strokeWidth(w)</a></li>
+	<li><a href="fill/rgb-func">rgb(r, g, b[, a])</a></li>
+	<li><a href="fill/hsl-func">hsl(h, s, l[, a])</a></li>
+	<li><a href="fill/trans-none">Using trans and none</a></li>
 </ul>
 
 <h2>Draw Loop</h2>
 <ul>
-	<li><a href="http://devdoodle.net/dev/102/">Using the draw loop</a></li>
-	<li><a href="http://devdoodle.net/dev/103/">Using frameRate</a></li>
+	<li><a href="draw/draw-loop">Using the draw loop</a></li>
+	<li><a href="draw/framerate">Using frameRate</a></li>
 </ul>
 
 <h2>Mouse</h2>
 <ul>
-	<li><a href="http://devdoodle.net/dev/114/">Using mouseX and mouseY</a></li>
-	<li><a href="http://devdoodle.net/dev/115/">Using mousePressed</a></li>
+	<li><a href="mouse/mousex-y">Using mouseX and mouseY</a></li>
+	<li><a href="mouse/mousepressed">Using mousePressed</a></li>
 </ul>
 
 <h2>Keyboard</h2>
 <ul>
-	<li><a href="http://devdoodle.net/dev/117/">Using keyCodes and keyCodes[num]</a></li>
-	<li><a href="http://devdoodle.net/dev/116/">Using key</a></li>
+	<li><a href="keyboard/keycodes">Using keyCodes and keyCodes[num]</a></li>
+	<li><a href="keyboard/key">Using key</a></li>
 </ul>
 
 <h2>Math</h2>
 <ul>
-	<li><a href="http://devdoodle.net/dev/105/">Using Math Properties and Methods as Global Variables</a></li>
-	<li><a href="http://devdoodle.net/dev/111/">rand([x[, y]])</a></li>
-	<li><a href="http://devdoodle.net/dev/112/">Number.prototype.bound(l[, h])</a></li>
+	<li><a href="math/properties-methods">Using Math Properties and Methods as Global Variables</a></li>
+	<li><a href="math/rand-func">rand([x[, y]])</a></li>
+	<li><a href="math/number-func">Number.prototype.bound(l[, h])</a></li>
 </ul>
 
 <h2>Size</h2>
 <ul>
-	<li><a href="http://devdoodle.net/dev/97/">size(x, y)</a></li>
-	<li><a href="http://devdoodle.net/dev/98/">Using width and height</a></li>
+	<li><a href="size/size-func">size(x, y)</a></li>
+	<li><a href="size/width-height">Using width and height</a></li>
 </ul>
 
 <h2>Console</h2>
 <ul>
-	<li><a href="http://devdoodle.net/dev/83/">print(input)</a></li>
-	<li><a href="http://devdoodle.net/dev/84/">resetLog()</a></li>
+	<li><a href="console/print-func">print(input)</a></li>
+	<li><a href="console/resetlog-func">resetLog()</a></li>
 </ul>
 
 <h2>Canvas</h2>
 <ul>
-	<li><a href="http://devdoodle.net/dev/118/">Using canvas and ctx</a></li>
+	<li><a href="canvas/canvas-ctx">Using canvas and ctx</a></li>
 </ul>
