--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -20,7 +20,7 @@
 	<li><a href="fill/fill-func">fill([shade] [r, g, b] [color])</a></li>
 	<li><a href="fill/stroke-func">stroke([shade] [r, g, b] [color])</a></li>
 	<li><a href="fill/bg-func">bg([shade] [r, g, b] [color])</a></li>
-	<li><a href="fill/strokew-func">strokeWidth(w)</a></li>
+	<li><a href="fill/strokewidth-func">strokeWidth(w)</a></li>
 	<li><a href="fill/rgb-func">rgb(r, g, b[, a])</a></li>
 	<li><a href="fill/hsl-func">hsl(h, s, l[, a])</a></li>
 	<li><a href="fill/trans-none">Using trans and none</a></li>
@@ -46,9 +46,9 @@
 
 <h2>Math</h2>
 <ul>
-	<li><a href="math/properties-methods">Using Math Properties and Methods as Global Variables</a></li>
+	<li><a href="math/global-math">Using Math Properties and Methods as Global Variables</a></li>
 	<li><a href="math/rand-func">rand([x[, y]])</a></li>
-	<li><a href="math/number-func">Number.prototype.bound(l[, h])</a></li>
+	<li><a href="math/number-proto-bound">Number.prototype.bound(l[, h])</a></li>
 </ul>
 
 <h2>Size</h2>
