--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -23,30 +23,30 @@
 	<li><a href="fill/strokewidth-func">strokeWidth(w)</a></li>
 	<li><a href="fill/rgb-func">rgb(r, g, b[, a])</a></li>
 	<li><a href="fill/hsl-func">hsl(h, s, l[, a])</a></li>
-	<li><a href="fill/trans-none">Using trans and none</a></li>
+	<li><a href="fill/trans-none">trans and none</a></li>
 </ul>
 
 <h2>Draw Loop</h2>
 <ul>
-	<li><a href="draw/draw-loop">Using the draw loop</a></li>
-	<li><a href="draw/framerate">Using frameRate</a></li>
+	<li><a href="draw/draw-loop">draw() loop</a></li>
+	<li><a href="draw/framerate">frameRate</a></li>
 </ul>
 
 <h2>Mouse</h2>
 <ul>
-	<li><a href="mouse/mousex-y">Using mouseX and mouseY</a></li>
-	<li><a href="mouse/mousepressed">Using mousePressed</a></li>
+	<li><a href="mouse/mousex-y">mouseX and mouseY</a></li>
+	<li><a href="mouse/mousepressed">mousePressed</a></li>
 </ul>
 
 <h2>Keyboard</h2>
 <ul>
-	<li><a href="keyboard/keycodes">Using keyCodes and keyCodes[num]</a></li>
-	<li><a href="keyboard/key">Using key</a></li>
+	<li><a href="keyboard/keycodes">keyCodes object</a></li>
+	<li><a href="keyboard/key">key variable</a></li>
 </ul>
 
 <h2>Math</h2>
 <ul>
-	<li><a href="math/global-math">Using Math Properties and Methods as Global Variables</a></li>
+	<li><a href="math/global-math">Globally-scoped Math</a></li>
 	<li><a href="math/rand-func">rand([x[, y]])</a></li>
 	<li><a href="math/number-proto-bound">Number.prototype.bound(l[, h])</a></li>
 </ul>
@@ -54,7 +54,7 @@
 <h2>Size</h2>
 <ul>
 	<li><a href="size/size-func">size(x, y)</a></li>
-	<li><a href="size/width-height">Using width and height</a></li>
+	<li><a href="size/width-height">width and height variables</a></li>
 </ul>
 
 <h2>Console</h2>
@@ -65,5 +65,5 @@
 
 <h2>Canvas</h2>
 <ul>
-	<li><a href="canvas/canvas-ctx">Using canvas and ctx</a></li>
+	<li><a href="canvas/canvas-ctx">canvas and ctx</a></li>
 </ul>
