Basic copy-editing of canvas docs

--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -11,7 +11,7 @@
 <h2>Text</h2>
 <ul>
 	<li><a href="text/text-func">text(x, y, t)</a></li>
-	<li><a href="text/align-func">textAlign(h, v)</a></li>
+	<li><a href="text/textalign-func">textAlign(h, v)</a></li>
 	<li><a href="text/font-func">font(f)</a></li>
 </ul>
 
