size docs-category merged to canvas

--- a/html/dev/docs.html
+++ b/html/dev/docs.html
@@ -51,12 +51,6 @@
 	<li><a href="math/number-proto-bound">Number.prototype.bound(l[, h])</a></li>
 </ul>
 
-<h2>Size</h2>
-<ul>
-	<li><a href="size/size-func">size(x, y)</a></li>
-	<li><a href="size/width-height">width and height variables</a></li>
-</ul>
-
 <h2>Console</h2>
 <ul>
 	<li><a href="console/print-func">print(input)</a></li>
@@ -65,5 +59,7 @@
 
 <h2>Canvas</h2>
 <ul>
+	<li><a href="canvas/size-func">size(x, y)</a></li>
+	<li><a href="canvas/width-height">width and height variables</a></li>
 	<li><a href="canvas/canvas-ctx">canvas and ctx</a></li>
 </ul>
