--- a/html/a/head.html
+++ b/html/a/head.html
@@ -43,6 +43,6 @@
 				<a href="/chat/">Chat</a>
 				<a href="/login/">Login</a>
 				<a href="/mod/">Mod</a>
-				<form action="/search/"><input type="text" name="q" value="$search" style="line-height: 16px;" placeholder="Search DevDoodle" /></form>
+				<form action="/search/"><input type="search" name="q" value="$search" style="line-height: 16px;" placeholder="Search DevDoodle" /></form>
 			</nav>
 			<div id="content">
